--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </div>
     
     
-<h1>Lorem, ipsum!</h1>
+<h1 id="heading1">Lorem, ipsum!</h1>
 
-<h2>Lorem ipsum dolor sit amet?</h2>
+<h2 id="head2">Lorem ipsum dolor sit amet?</h2>
 
 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid itaque harum accusamus molestiae explicabo dolores distinctio, nisi ut rem recusandae!</h3>
 
